# cerdito

./: Cargo.toml  Dockerfile  README.md  cerdito.toml
.github/workflows/: build.yml  build_static.yml  docker.yml
src/: atlas.rs  azure.rs  config.rs  kubernetes.rs  main.rs  models.rs
