[package]
name = "cerdito"
version = "0.5.2"
authors = ["Óscar García Amor <ogarcia@connectical.com>"]
edition = "2021"
description = "Save a few cents on your cloud infrastructure"
readme = "README.md"
repository = "https://github.com/Telefonica/cerdito"
license = "GPL-3.0-or-later"
keywords = ["cloud", "telefonica", "atlas", "kubernetes", "cli"]

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
diqwest = { version = "3.1" }
env_logger = { version = "0.11" }
figment = { version = "0.10", features = ["toml", "env"] }
k8s-openapi = { version = "0.24", features = ["v1_29"] }
kube = { version = "0.99" }
log = { version = "0.4" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.44", features = ["full"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
